--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,10 @@
 
   <div class="purpleheadline">TYPE, NERDDDY potato!!</div>
   <div>TEST</div>
+  <form>
   <textarea id="textArea" style="width:100%; height:100%;"></textarea>
   <button id="saveButton">Save</button>
-
+  </form>
   <p id="demo">hello</p>
 
 
