--- a/src/index.html
+++ b/src/index.html
@@ -8,23 +8,26 @@
 
 </head>
 <body>
-
+<!--
   <div class="purpleheadline">TYPE, NERDDDY potato!!</div>
   <div>TEST</div>
   <form>
-  <textarea id="textArea" style="width:100%; height:100%;"></textarea>
-  <button id="saveButton">Save</button>
+  
+
   </form>
   <p id="demo">hello</p>
 
 
   <button id="btn">Alert</button>
 
+-->
 
+<button id="call-rust-btn">call rust</button>
+<p id="response">response appears here</p>
 
-  <script src="./main.js"></script>
+<textarea id="textArea" style="width:100%; height:100%;"></textarea>
+<button id="saveButton">Save</button>
 
-
-
+<script src="./main.js"></script>
 </body>
 </html>
