--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,19 @@
 -->
 
 <button id="call-rust-btn">call rust</button>
+
 <p id="response">response appears here</p>
 
 <textarea id="textArea" style="width:100%; height:100%;"></textarea>
 <button id="saveButton">Save</button>
+
+<div id="divisadero">
+
+<button id="smonyx">smonyx</button>
+<button id="bigchrome">bigsmallchrome</button>
+<p>blahdy blah womp womp</p>
+<p>lorem ipsum $ sit amore</p>
+</div>
 
 <script src="./main.js"></script>
 </body>
