commit the frog!

--- a/src/index.html
+++ b/src/index.html
@@ -4,39 +4,17 @@
   <meta charset="UTF-8">
   <title>Text Editor</title>
   <link rel="stylesheet" href="./styles.css">
+  <script src="./main.js" defer></script>
 
 
 </head>
 <body>
-<!--
-  <div class="purpleheadline">TYPE, NERDDDY potato!!</div>
-  <div>TEST</div>
-  <form>
-  
+<button id = tab1>talk to ai</button>
+<button id = tab2>write word things</button>
+<div id = 'contextWindow'>
+tab context here
 
-  </form>
-  <p id="demo">hello</p>
-
-
-  <button id="btn">Alert</button>
-
--->
-
-<button id="call-rust-btn">call rust</button>
-
-<p id="response">response appears here</p>
-
-<textarea id="textArea" style="width:100%; height:100%;"></textarea>
-<button id="saveButton">Save</button>
-
-<div id="divisadero">
-
-<button id="smonyx">smonyx</button>
-<button id="bigchrome">bigsmallchrome</button>
-<p>blahdy blah womp womp</p>
-<p>lorem ipsum $ sit amore</p>
 </div>
 
-<script src="./main.js"></script>
 </body>
 </html>
