added back the "core" folder

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
 
 </head>
 <body>
-<button id = tab1>talk to ai</button>
-<button id = tab2>write word things</button>
+<button id = 'chat'>Chat</button>
+<button id = 'doc'>Doc</button>
+
 <div id = 'contextWindow'>
 tab context here
-
 </div>
 
 </body>
